# Logging_library

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/log_stats/: CMakeLists.txt  main.cpp
apps/test_logger/: CMakeLists.txt  main.cpp
include/logging/: Logger.h
src/: CMakeLists.txt  Logger.cpp
tests/: CMakeLists.txt  unit_tests.cpp
